# log.c

./: .gitignore  CMakeLists.txt
demo/: demo-2-threads.c  demo.c  file.c
src/logc/: log.c  log.h
